[tool.poetry]
name = "pytorch-metal-acceleration-example"
version = "0.1.0"
description = ""
authors = ["なるみ <toucans-cutouts0f@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
loguru = "^0.6.0"
tqdm = "^4.64.0"
torch = {url = "https://download.pytorch.org/whl/nightly/cpu/torch-1.12.0.dev20220519-cp38-none-macosx_11_0_arm64.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"